[*] BO : Improved mime type detection method! no more finfo method required [-] FO : Fixed bug #3387 - Bad state selection and display on address add/modify [-] BO : Fixed bug #3512 - File download preview wasn't working properly if product not yet saved [-] BO : Fixed bug #3687 - BOM is not skipped for UTF-8 CSV files [-] MAILS: Fixed bug #3688 - Missing ES emails [-] BO : Fixed bug #3712 - Attribute value import was always new [-] FO : Fixed bug #3719 - Thickbox picture position was too low (IE 6/7/8)

--- a/css/thickbox.css
+++ b/css/thickbox.css
@@ -167,3 +167,8 @@ margin-top: expression(0 - parseInt(this.offsetHeight / 2) + (TBWindowMargin = d
 	margin-top:1px;
 	_margin-bottom:1px;
 }
+
+*+html #TB_window { /* ie7 hack */
+	position: absolute;
+	margin-top: expression(0 - parseInt(this.offsetHeight / 2) + (TBWindowMargin = document.documentElement && document.documentElement.scrollTop || document.body.scrollTop) + 'px');
+}
